# m68k-emu

./: CMakeLists.txt
include/: aligned_memory.hpp  cpu.hpp  cpu_state.hpp  defines.hpp  helpers.hpp  instruction_decoder.hpp  instructions.hpp  memory.hpp  registers.hpp  tests_functions.hpp
include/instructions/: add.hpp  adda.hpp  addi.hpp  addq.hpp  addx.hpp  and.hpp  andi.hpp  bcc.hpp  bit_manip.hpp  bit_shift.hpp  clr.hpp  cmp.hpp  cmpa.hpp  cmpi.hpp  div.hpp  eor.hpp  eori.hpp  ext.hpp  illegal.hpp  instruction.hpp  jmp.hpp  jsr.hpp  lea.hpp  link.hpp  move.hpp  moveq.hpp  mul.hpp  neg.hpp  nop.hpp  or.hpp  ori.hpp  pea.hpp  rts.hpp  scc.hpp  sub.hpp  suba.hpp  subi.hpp  subq.hpp  subx.hpp  tst.hpp  (+1 more)
src/: cpu.cpp  cpu_state.cpp  disassembler.cpp  instruction_decoder.cpp  memory.cpp  registers.cpp
src/instructions/: add.cpp  adda.cpp  addi.cpp  addq.cpp  addx.cpp  and.cpp  andi.cpp  bcc.cpp  bit_manip.cpp  bit_shift.cpp  clr.cpp  cmp.cpp  cmpa.cpp  cmpi.cpp  div.cpp  eor.cpp  eori.cpp  ext.cpp  illegal.cpp  (+22 more)
test/: CMakeLists.txt  test_addressing.cpp  test_benchmark.cpp  test_bubblesort.cpp  test_disassembler.cpp  test_fibonacci.cpp  test_in_add.cpp  test_in_adda.cpp  test_in_addi.cpp  test_in_addq.cpp  test_in_addx.cpp  test_in_bcc.cpp  test_in_bit_manip.cpp  test_in_div.cpp  test_in_ext.cpp  test_in_jmp.cpp  test_in_jsr_rts.cpp  test_in_lea.cpp  test_in_link_unlk.cpp  test_in_move.cpp  test_in_moveq.cpp  test_in_mul.cpp  test_in_nop.cpp  test_in_scc.cpp  test_in_sub.cpp  test_in_suba.cpp  test_in_subi.cpp  test_in_subq.cpp  test_in_subx.cpp  test_memory.cpp
(+2 files in other folders)
